tests/ui/typech/pointer_ref_without_unsafe.stderr
× error[LM4398]: reference-of outside `unsafe` block
   ╭─[pointer_ref_without_unsafe.lm:2:13]
 1 │ fn foo(val: UInt64) {
 2 │     let _ = &val;
   ∶             ^^^^ reference-of requires `unsafe` block
 3 │ }
   ╰──