tests/ui/typech/pointer_ref_without_unsafe.lm
fn foo(val: UInt64) {
    let _ = &val;
}
